# test_project_public

./: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  modelviewer.cc  modelviewer.h  parser.cc  parser.h  s21_model.cc
gif/: CMakeLists.txt
